--- a/cart.html
+++ b/cart.html
@@ -273,6 +273,26 @@ dropdownMenu.classList.add('hidden');
     console.log('Redirecting to index.html...');
     window.location.href = "index.html"; 
     })
+
+    document.addEventListener("DOMContentLoaded", function () { 
+  const loggedInUser = JSON.parse(localStorage.getItem("loggedInUser"));
+
+if (loggedInUser && loggedInUser.userLogged) {
+  const userName = loggedInUser.username;
+  const email = loggedInUser.email;
+  const points = loggedInUser.points;
+  alert(`Welcome ${userName}, you are logged in`);
+  console.log(userName);
+  console.log(email);
+  console.log(loggedInUser);
+  userID.innerHTML = ` ${userName}`;
+  emailID.innerHTML = `${email}`; 
+  pointsID.innerHTML = `${points}`;
+} else {
+  const confirmLogout = confirm("You are not logged in. Login to purchase items");
+  window.location.href = "login.html";
+}
+  })
 </script>
 
 </html>
