--- a/shop_origami.html
+++ b/shop_origami.html
@@ -166,7 +166,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/4_paper.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/4_paper.jpg" alt="Chiyogami Origami Paper" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -182,7 +182,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/5_paper.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/5_paper.jpg" alt="Kimono Pattern Origami Paper" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -198,7 +198,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/6_paper.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/6_paper.jpg" alt="Double Sided Color Origami Paper" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -214,14 +214,14 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/11_paper.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/11_paper.jpg" alt="Japanese Sakura Origami Paper" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
                     <h3 class="text-sm text-gray-700">
                         <a href="#">
                         <span aria-hidden="true" class="absolute inset-0"></span>
-                        Japanese Sakuka Origami Paper 50PCs
+                        Japanese Sakura Origami Paper 50PCs
                         </a>
                     </h3>
                     </div>
@@ -230,7 +230,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/12_paper.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/12_paper.jpg" alt="Mulberry Paper" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -246,7 +246,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/17_paper.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/17_paper.jpg" alt="Pure Red Origami Paper" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -262,7 +262,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/8_paper.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/8_paper.jpg" alt="Pure Blue Origami Set" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -278,7 +278,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/13_paper.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/13_paper.jpg" alt="Metallic Pattern Origami Paper" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -294,7 +294,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/9_paper.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/9_paper.jpg" alt="Double Sided Colorful Origami Paper" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -310,7 +310,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/14_paper.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/14_paper.jpg" alt="Shiny Origami Paper" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -326,7 +326,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/16_paper.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/16_paper.jpg" alt="Vibrant Colors Origami Paper" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -342,7 +342,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/15_paper.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/15_paper.jpg" alt="Butterfly Pattern Origami Paper" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
@@ -358,7 +358,7 @@
             </div>
             <div class="group relative">
                 <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                    <img src="images/shop/10_paper.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                    <img src="images/shop/10_paper.jpg" alt="Origami Metallic Foil Paper Art" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between">
                     <div>
