--- a/tutorial.html
+++ b/tutorial.html
@@ -169,7 +169,7 @@
 							</div>
 							<div class="group relative">
 								<div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-									<img src="images/origami/bluebell flower.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+									<img src="images/origami/bluebell flower.jpg" alt="Bluebell Flower" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
 								</div>
 								<div class="mt-4 flex justify-between">
 									<div>
@@ -192,7 +192,7 @@
 							</div>
 							<div class="group relative">
 								<div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-									<img src="images/origami/cat.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+									<img src="images/origami/cat.jpg" alt="Cat" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
 								</div>
 								<div class="mt-4 flex justify-between">
 									<div>
@@ -215,7 +215,7 @@
 							</div>
 							<div class="group relative">
 								<div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-									<img src="images/origami/fox.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+									<img src="images/origami/fox.jpg" alt="Fox" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
 								</div>
 								<div class="mt-4 flex justify-between">
 									<div>
@@ -238,7 +238,7 @@
 							</div>
 							<div class="group relative">
 								<div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-									<img src="images/origami/butterfly.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+									<img src="images/origami/butterfly.jpg" alt="Butterfly" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
 								</div>
 								<div class="mt-4 flex justify-between">
 									<div>
@@ -261,7 +261,7 @@
 							</div>
 							<div class="group relative">
 								<div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-									<img src="images/origami/frog.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+									<img src="images/origami/frog.jpg" alt="Frog" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
 								</div>
 								<div class="mt-4 flex justify-between">
 									<div>
@@ -284,7 +284,7 @@
 							</div>
 							<div class="group relative">
 								<div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-									<img src="images/origami/whale.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+									<img src="images/origami/whale.jpg" alt="Whale" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
 								</div>
 								<div class="mt-4 flex justify-between">
 									<div>
@@ -307,7 +307,7 @@
 							</div>
 							<div class="group relative">
 								<div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-									<img src="images/origami/hat.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+									<img src="images/origami/hat.jpg" alt="Hat" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
 								</div>
 								<div class="mt-4 flex justify-between">
 									<div>
@@ -330,7 +330,7 @@
 							</div>
 							<div class="group relative">
 								<div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-									<img src="images/origami/heart.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+									<img src="images/origami/heart.jpg" alt="Heart" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
 								</div>
 								<div class="mt-4 flex justify-between">
 									<div>
@@ -353,7 +353,7 @@
 							</div>
 							<div class="group relative">
 								<div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-									<img src="images/origami/simpleflower.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+									<img src="images/origami/simpleflower.jpg" alt="Simple Flower" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
 								</div>
 								<div class="mt-4 flex justify-between">
 									<div>
@@ -376,7 +376,7 @@
 							</div>
 							<div class="group relative">
 								<div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-									<img src="images/origami/grass.jpg" alt="crane" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+									<img src="images/origami/grass.jpg" alt="Grass" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
 								</div>
 								<div class="mt-4 flex justify-between">
 									<div>
