--- a/profile.html
+++ b/profile.html
@@ -114,29 +114,29 @@
           <div class="flex-container">
             <div class="gallery-container">
               <div class="gallery-item">
-                <img src="images/badge_icon/icon1.png" class="w-32 rounded-full" alt="Avatar" onclick="showModal()">
+                <img src="images/badge_icon/icon1.png" class="w-32 rounded-full" alt="3 Tutorial Achiever" onclick="showModal()">
               </div>
               <br>
               <div class="gallery-item2">
-                  <img src="images/badge_icon/icon6.png" class="w-32 rounded-full" alt="Avatar">
+                  <img src="images/badge_icon/icon6.png" class="w-32 rounded-full" alt="10 Tutorial Achiever">
               </div>
               <br>
               <div class="gallery-item2">
-                <img src="images/badge_icon/icon2.png" class="w-32 rounded-full" alt="Avatar">
+                <img src="images/badge_icon/icon2.png" class="w-32 rounded-full" alt="Trophy">
               </div>
             </div>
             <br>
             <div class="gallery-container">
               <div class="gallery-item">
-                  <img src="images/badge_icon/icon4.png" class="w-32 rounded-full" alt="Avatar" onclick="showModal()">
+                  <img src="images/badge_icon/icon4.png" class="w-32 rounded-full" alt="5 Tutorial Achiever" onclick="showModal()">
               </div>
               <br>
               <div class="gallery-item2">
-                <img src="images/badge_icon/icon5.png" class="w-32 rounded-full" alt="Avatar">
+                <img src="images/badge_icon/icon5.png" class="w-32 rounded-full" alt="Checklist">
               </div>
               <br>
               <div class="gallery-item2">
-                <img src="images/badge_icon/icon3.png" class="w-32 rounded-full" alt="Avatar">
+                <img src="images/badge_icon/icon3.png" class="w-32 rounded-full" alt="Thumbs up">
               </div>
             </div>
           </div>
@@ -149,22 +149,22 @@
       <br>
       <div class="flex-gallery">
         <a href="tutorial.html">
-          <img src="images/profile/gallery/crane.png" alt="Image 1" class="h-44 w-44">
+          <img src="images/profile/gallery/crane.png" alt="Crane Origami" class="h-44 w-44">
         </a>
         <a href="tutorial.html">
-          <img src="images/profile/gallery/heart.jpg" alt="Image 2" class="h-44 w-44">
+          <img src="images/profile/gallery/heart.jpg" alt="Heart Origami" class="h-44 w-44">
         </a>
         <a href="crane.html">
-          <img src="images/profile/gallery/butterfly.jpg" alt="Image 3" class="h-44 w-44">
+          <img src="images/profile/gallery/butterfly.jpg" alt="Butterfly Origami" class="h-44 w-44">
         </a>
         <a href="tutorial.html">
-          <img src="images/profile/gallery/lotus.webp" alt="Image 4" class="h-44 w-44">
+          <img src="images/profile/gallery/lotus.webp" alt="Lotus Origami" class="h-44 w-44">
         </a>
         <a href="tutorial.html">
-          <img src="images/profile/gallery/fish.webp" alt="Image 5" class="h-44 w-44">
+          <img src="images/profile/gallery/fish.webp" alt="Fish Origami" class="h-44 w-44">
         </a>
         <a href="tutorial.html">
-          <img src="images/profile/gallery/crab.jpg" alt="Image 6" class="h-44 w-44">
+          <img src="images/profile/gallery/crab.jpg" alt="Crab Origami" class="h-44 w-44">
         </a>
       </div>
     </div>
@@ -183,32 +183,7 @@
 
     </div>
     </div>
-    <section class="collection pb-32">
-      <div class="header-collection">
-        <h2>Collections</h2>
-      </div>
-      <br>
-      <div class="flex-collection">
-        <a href="tutorial.html">
-          <img src="images/origami/bluebell flower.jpg" alt="Image 1">
-        </a>
-        <a href="tutorial.html">
-          <img src="images/origami/fox.jpg" alt="Image 2">
-        </a>
-        <a href="crane.html">
-          <img src="images/origami/crane.jpg" alt="Image 3">
-        </a>
-        <a href="tutorial.html">
-          <img src="images/origami/butterfly.jpg" alt="Image 4">
-        </a>
-        <a href="tutorial.html">
-          <img src="images/origami/simpleflower.jpg" alt="Image 5">
-        </a>
-        <a href="tutorial.html">
-          <img src="images/origami/cat.jpg" alt="Image 6">
-        </a>
-      </div>
-    </section>
+
   </body>
 
 
