--- a/tutorial.html
+++ b/tutorial.html
@@ -85,40 +85,10 @@
 	<body>
 		
 		<div class="container px-60">
-			<div class="text-left px-50">
-				<h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-5xl">Tutorials</h1>
-				<br>
-				<br>
-				<div class="dropdown-container">
-					<div class="sec-center">
-						<input class="dropdown" type="checkbox" id="dropdown1" name="dropdown1"/>
-						<label class="for-dropdown" for="dropdown1">Category<i class="uil uil-arrow-down"></i></label>
-						<div class="section-dropdown"> 
-							<input class="dropdown-sub" type="checkbox" id="dropdown-sub1" name="dropdown-sub1"/>
-							<div class="section-dropdown-sub"> 
-								<a href="tutorial-animals.html">Animals<i class="uil uil-arrow-right"></i></a>
-								<a href="#">Decorations <i class="uil uil-arrow-right"></i></a>
-								<a href="#">Plants <i class="uil uil-arrow-right"></i></a>
-								<a href="#">Vehicles <i class="uil uil-arrow-right"></i></a>
-							</div>
-						</div>
-					</div>
-					<div class="sec-center2">
-						<input class="dropdown2" type="checkbox" id="dropdown2" name="dropdown2"/>
-						<label class="for-dropdown2" for="dropdown2">Difficulty<i class="uil uil-arrow-down"></i></label>
-						<div class="section-dropdown2"> 
-							<input class="dropdown-sub" type="checkbox" id="dropdown-sub2" name="dropdown-sub2"/>
-							<div class="section-dropdown-sub"> 
-								<a href="tutorial-beginner.html">Beginner<i class="uil uil-arrow-right"></i></a>
-								<a href="#">Intermediate <i class="uil uil-arrow-right"></i></a>
-								<a href="#">Advanced <i class="uil uil-arrow-right"></i></a>
-							</div>
-						</div>
-					</div>
-				</div>
+			<div class="text-left pt-50 pb-20">
+				<h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-5xl pb-0">Tutorials</h1>
 					<div class="bg-white">
 						<div class="mx-auto max-w-auto px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
-						<!-- <h2 class="text-2xl font-bold tracking-tight text-gray-900">Customers also purchased</h2> -->
 					
 						<div class="mt-6 grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
 							<div class="group relative">
