--- a/profile.html
+++ b/profile.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Profile</title>
-  <link rel="stylesheet" type="text/css" href="styles/styles.css">
+  <link rel="stylesheet" type="text/css" href="styles/profile.css">
     <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/styles/tailwind.css">
     <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="icon" type="image/x-icon" href="images/1x/LogoHeart.png">
@@ -177,7 +177,8 @@
           Completes 3 Tutorials
         </h1>
         <img class="w-30 h-50" src="images/badge_icon/yes_5 2.png">
-        <button onclick="closeModal()" type="submit" class="bg-indigo-600 shadow-xl hover:bg-indigo-500 text-white font-bold rounded-full p-4 w-48">Close</button>
+        <button onclick="closeModal()" type="button" class="bg-indigo-600 shadow-xl hover:bg-indigo-500 text-white font-bold rounded-full p-4 w-48">Close</button>
+
       </div>
       </div>
 
