buttons flex-row

--- a/crane_stepbystep.html
+++ b/crane_stepbystep.html
@@ -147,20 +147,20 @@
     <br>
     <div class="card-group mx-auto">
       <div class="card">
-        <img src="images/crane_tutorial/1.jpg" class="card-img-top" alt="...">
+        <img src="images/crane_tutorial/1.jpg" class="card-img-top" alt="Crane Folding">
         <div class="card-body" id="h5text">
           <h5 class="card-title text-center">Get a piece of Origami paper. This is the front of the paper. <br>
             The crane will end up in this color.<br><br></h5>
         </div>
       </div>
       <div class="card">
-        <img src="images/crane_tutorial/2.jpg" class="card-img-top" alt="...">
+        <img src="images/crane_tutorial/2.jpg" class="card-img-top" alt="Crane Folding">
         <div class="card-body text-center" id="h5text">
           <h5 class="card-title">This is the back of the paper. <br>(Usually, it is white.) <br><br><br></h5>
         </div>
       </div>
       <div class="card">
-        <img src="images/crane_tutorial/3.jpg" class="card-img-top" alt="...">
+        <img src="images/crane_tutorial/3.jpg" class="card-img-top" alt="Crane Folding">
         <div class="card-body text-center" id="h5text">
           <h5 class="card-title">To begin, we will fold a 'square/preliminary base'. 
             <br>Fold the bottom edge up to the top edge.</h5>
@@ -168,7 +168,7 @@
       </div>
     </div>
 
-    <div class="container h-25 py-10">
+    <div class="container h-25 py-10 flex-row">
 
         <a href="crane.html" class="flex items-center justify-center px-4 h-10 me-3 text-base font-medium text-gray-500 bg-white border border-gray-300
          rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
