--- a/crane_stepbystep_7.html
+++ b/crane_stepbystep_7.html
@@ -166,7 +166,7 @@
       </div>
     </div>
 
-    <div class="container h-25 py-10">
+    <div class="container h-25 py-10 flex-row">
 
         <a href="crane_stepbystep_6.html" class="flex items-center justify-center px-4 h-10 me-3 text-base font-medium text-gray-500 bg-white border border-gray-300
          rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
