--- a/lotus_stepbystep.html
+++ b/lotus_stepbystep.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Crane Origami</title>
+  <title>Lotus Origami</title>
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
   <link rel="icon" type="image/x-icon" href="images/1x/LogoHeart.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -79,7 +79,7 @@
   </header>
 
   <div class="progress">
-    <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+    <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
   </div>
     
 <!-- Breadcrumbs -->
@@ -106,7 +106,7 @@
           <svg class="rtl:rotate-180 w-3 h-3 text-gray-400 mx-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
           </svg>
-          <span class="ms-1 text-sm font-medium text-gray-500 md:ms-2 dark:text-gray-400">Crane</span>
+          <span class="ms-1 text-sm font-medium text-gray-500 md:ms-2 dark:text-gray-400">Lotus</span>
         </div>
       </li>
       <li aria-current="page">
@@ -124,7 +124,7 @@
     <!-- Title -->
     <div class="text-left px-56">
       <div class="flex justify-center items-center">
-        <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-5xl pb-11">Crane Tutorial</h1>
+        <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-5xl pb-11">Lotus Tutorial</h1>
         <button id="openButton">3D</button>
       </div>
         
@@ -147,28 +147,29 @@
     <br>
     <div class="card-group mx-auto">
       <div class="card">
-        <img src="images/crane_tutorial/28.jpg" class="card-img-top" alt="Crane Folding">
+        <img src="images/lotus tutorial/1.jpg" class="card-img-top" alt="Lotus Folding">
         <div class="card-body" id="h5text">
-          <h5 class="card-title text-center"><br>This is now a 'bird base'.<br><br></h5>
+          <h5 class="card-title text-center"> This is the back of the origami paper, usually white.<br>
+            This colour will be visible on the bottom of the lotus if you fold the last set of petals.</h5>
         </div>
       </div>
       <div class="card">
-        <img src="images/crane_tutorial/29.jpg" class="card-img-top" alt="Crane Folding">
+        <img src="images/lotus tutorial/2.jpg" class="card-img-top" alt="Lotus Folding">
         <div class="card-body text-center" id="h5text">
-          <h5 class="card-title">Fold the bottom left and right diagonal edges of the front layer to align with the central crease.</h5>
+          <h5 class="card-title"><br><br>Fold the bottom edge of the paper up to the top edge.<br><br></h5>
         </div>
       </div>
       <div class="card">
-        <img src="images/crane_tutorial/30.jpg" class="card-img-top" alt="Crane Folding">
+        <img src="images/lotus tutorial/3.jpg" class="card-img-top" alt="Lotus Folding">
         <div class="card-body text-center" id="h5text">
-          <h5 class="card-title">Flip the model over, from left to right.<br> Repeat the last step on the back.</h5>
+          <h5 class="card-title"><br><br>Unfold the paper.<br><br><br></h5>
         </div>
       </div>
     </div>
 
     <div class="container h-25 py-10 flex-row">
 
-        <a href="crane_stepbystep_8.html" class="flex items-center justify-center px-4 h-10 me-3 text-base font-medium text-gray-500 bg-white border border-gray-300
+        <a href="crane.html" class="flex items-center justify-center px-4 h-10 me-3 text-base font-medium text-gray-500 bg-white border border-gray-300
          rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
         <svg class="w-3.5 h-3.5 me-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 5H1m0 0 4 4M1 5l4-4"/>
@@ -176,7 +177,7 @@
         Previous
         </a>
         <!-- Next Button -->
-        <a href="crane_stepbystep_10.html" class="flex items-center justify-center px-4 h-10 text-base font-medium text-gray-500 bg-white border border-gray-300
+        <a href="crane_stepbystep_1.html" class="flex items-center justify-center px-4 h-10 text-base font-medium text-gray-500 bg-white border border-gray-300
          rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
         Next
         <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
