--- a/lotus_stepbystep_5.html
+++ b/lotus_stepbystep_5.html
@@ -79,7 +79,7 @@
   </header>
 
   <div class="progress">
-    <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+    <div class="progress-bar" role="progressbar" style="width: 76%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
   </div>
     
 <!-- Breadcrumbs -->
@@ -147,29 +147,28 @@
     <br>
     <div class="card-group mx-auto">
       <div class="card">
-        <img src="images/lotus tutorial/1.jpg" class="card-img-top" alt="Lotus Folding">
+        <img src="images/lotus tutorial/16.jpg" class="card-img-top" alt="Lotus Folding">
         <div class="card-body" id="h5text">
-          <h5 class="card-title text-center"> This is the back of the origami paper, usually white.<br>
-            This colour will be visible on the bottom of the lotus if you fold the last set of petals.</h5>
+          <h5 class="card-title text-center">Fold the other three points to the center.</h5>
         </div>
       </div>
       <div class="card">
-        <img src="images/lotus tutorial/2.jpg" class="card-img-top" alt="Lotus Folding">
+        <img src="images/lotus tutorial/17.jpg" class="card-img-top" alt="Lotus Folding">
         <div class="card-body text-center" id="h5text">
-          <h5 class="card-title"><br><br>Fold the bottom edge of the paper up to the top edge.<br><br></h5>
+          <h5 class="card-title">Fold one of the corners in a little.<br></h5>
         </div>
       </div>
       <div class="card">
-        <img src="images/lotus tutorial/3.jpg" class="card-img-top" alt="Lotus Folding">
+        <img src="images/lotus tutorial/18.jpg" class="card-img-top" alt="Lotus Folding">
         <div class="card-body text-center" id="h5text">
-          <h5 class="card-title"><br><br>Unfold the paper.<br><br><br></h5>
+          <h5 class="card-title">Whilst holding the folded corner with one hand, bring the flap behind it forwards, reversing it over to this side.</h5>
         </div>
       </div>
     </div>
 
     <div class="container h-25 py-10 flex-row">
 
-        <a href="lotus.html" class="flex items-center justify-center px-4 h-10 me-3 text-base font-medium text-gray-500 bg-white border border-gray-300
+        <a href="lotus_stepbystep_4.html" class="flex items-center justify-center px-4 h-10 me-3 text-base font-medium text-gray-500 bg-white border border-gray-300
          rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
         <svg class="w-3.5 h-3.5 me-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 5H1m0 0 4 4M1 5l4-4"/>
@@ -177,7 +176,7 @@
         Previous
         </a>
         <!-- Next Button -->
-        <a href="lotus_stepbystep_1.html" class="flex items-center justify-center px-4 h-10 text-base font-medium text-gray-500 bg-white border border-gray-300
+        <a href="lotus_stepbystep_6.html" class="flex items-center justify-center px-4 h-10 text-base font-medium text-gray-500 bg-white border border-gray-300
          rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">
         Next
         <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
