--- a/crane_upload.html
+++ b/crane_upload.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Lotus Origami</title>
+  <title>Crane Origami</title>
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
   <link rel="icon" type="image/x-icon" href="images/1x/LogoHeart.png">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.css" rel="stylesheet" />
@@ -107,7 +107,7 @@
 			<svg class="rtl:rotate-180 w-3 h-3 text-gray-400 mx-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
 				<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
 			</svg>
-			<span class="ms-1 text-sm font-medium text-gray-500 md:ms-2 dark:text-gray-400">Crane</span>
+			<a href="crane.html" class="ms-1 text-sm font-medium text-gray-700 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white">Crane</a>
 			</div>
 		</li>
 		<li aria-current="page">
