type of instruction button

--- a/crane.html
+++ b/crane.html
@@ -74,6 +74,8 @@
 		  </nav>
 		  
 	</header>
+
+  <!-- Breadcrumbs -->
   <nav class="flex px-28 py-11" aria-label="Breadcrumb">
     <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
     <li class="inline-flex items-center">
@@ -102,15 +104,19 @@
     </li>
     </ol>
 </nav>
+
   <br>
   <br>
-            
-  <div>
+  
+  <!-- Type of Instruction -->
+  <div class="pt-30 pb-40">
     <div class="text-left">
-      <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-5xl px-56">Crane Origami</h1>
+      <h1 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-5xl px-36">Crane Origami</h1>
       <div class="flex justify-center">
-        <a href="crane_stepbystep.html" class="m-10 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-3xl px-32 py-32 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Step by Step Instructions</a>
-        <a href="crane_video.html" class="m-10 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-3xl px-52 py-32 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800">Video Tutorial</a>
+        <a href="crane_stepbystep.html" class="m-10 text-white bg-indigo-700 hover:bg-indigo-800 focus:ring-4 focus:ring-indigo-300 
+        font-medium rounded-lg text-3xl px-32 py-32 dark:bg-indigo-600 dark:hover:bg-indigo-700 focus:outline-none dark:focus:ring-indigo-800">Step by Step Instructions</a>
+        <a href="crane_video.html" class="m-10 text-white bg-indigo-700 hover:bg-indigo-800 focus:ring-4 focus:ring-indigo-300
+         font-medium rounded-lg text-3xl px-52 py-32 dark:bg-indigo-600 dark:hover:bg-indigo-700 focus:outline-none dark:focus:ring-indigo-800">Video Tutorial</a>
       </div>
     </div>
   </div>
