--- a/lotus.html
+++ b/lotus.html
@@ -120,6 +120,7 @@
 
 </body>
 
+<!-- Footer -->
 <footer class="bg-indigo-900 dark:bg-gray-900">
     <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
         <div class="md:flex md:justify-between">
