--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 			  <div class="relative flex h-16 items-center justify-between">
 				<div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
 
-				  <button type="button" class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-900 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white" aria-controls="mobile-menu" aria-expanded="false">
+				  <button type="button" class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-900 hover:bg-gray-700
+				   hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white">
 					<span class="absolute -inset-0.5"></span>
 					<span class="sr-only">Open main menu</span>
 
 					<svg class="block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-					  <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+					  <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"/>
 					</svg>
 
 					<svg class="hidden h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
@@ -57,7 +58,7 @@
             </button>
             
             <!-- Add the dropdown menu with a class to control its visibility -->
-            <div name ="dropdown-menu" id="dropdown-menu" class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5
+            <div id="dropdown-menu" class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5
              focus:outline-none hidden" role="menu" aria-labelledby="dropdown-toggle" tabindex="-1">
               <a href="profile.html" class="block px-4 py-2 text-sm text-gray-700" role="menuitem">Your Profile</a>
               <a href="rewards.html" class="block px-4 py-2 text-sm text-gray-700" role="menuitem">Rewards</a>
@@ -90,7 +91,7 @@
 					<div class="flex items-center space-x-6 lg:space-x-8">
 					  <div class="grid flex-shrink-0 grid-cols-1 gap-y-6 lg:gap-y-8">
 						<div class="h-64 w-44 overflow-hidden rounded-lg sm:opacity-0 lg:opacity-100">
-						  <img src="images/origami/bluebell flower.jpg" alt="Bluebell Flower Origami" class="h-full w-full object-cover object-center">
+						  <img src="images/origami/bluebellflower.jpg" alt="Bluebell Flower Origami" class="h-full w-full object-cover object-center">
 						</div>
 						<div class="h-64 w-44 overflow-hidden rounded-lg">
 						  <img src="images/origami/cat.jpg" alt="Cat Origami" class="h-full w-full object-cover object-center">
@@ -176,13 +177,13 @@
 
 
 	<!-- Collect Badges & Exchange to Rewards -->
-	<div class="class="md:container md:mx-auto">
+	<div class="md:container md:mx-auto">
 		<div class="text-center pt-28">
 			<h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl">Collect Badges & <br> Exchange them into Rewards!</h1>
 			<div class="w-50 py-10">
-				<img class="inline-flex items-center justify-center w-40 h-40" src="images/badge_icon/icon1.png">
-				<img class="inline-flex items-center justify-center w-40 h-40" src="images/badge_icon/icon2.png">
-				<img class="inline-flex items-center justify-center w-40 h-40" src="images/badge_icon/icon3.png">
+				<img class="inline-flex items-center justify-center w-40 h-40" src="images/badge_icon/icon1.png" alt="Badge Icon 1">
+				<img class="inline-flex items-center justify-center w-40 h-40" src="images/badge_icon/icon2.png" alt="Badge Icon 2">
+				<img class="inline-flex items-center justify-center w-40 h-40" src="images/badge_icon/icon3.png" alt="Badge Icon 3">
 			</div>
 		</div>
 	</div>
@@ -232,7 +233,7 @@
         <div class="md:flex md:justify-between">
           <div class="mb-6 md:mb-0">
               <a href="about.html" class="flex items-center">
-                  <img src="images/bloopbloopstudio_logo.png" class="h-8 me-3" alt="BloopBloop Studios Logo" />
+                  <img src="images/bloopbloopstudio_logo.png" class="h-8 me-3" alt="BloopBloop Studios Logo">
                   <span class="self-center text-2xl font-semibold whitespace-nowrap text-indigo-50">BloopBloop Studios</span>
               </a>
           </div>
@@ -272,7 +273,7 @@
               </div>
           </div>
       </div>
-      <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
+      <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8">
       <div class="sm:flex sm:items-center sm:justify-between">
           <span class="text-sm text-gray-300 sm:text-center dark:text-gray-400">© 2023 <a href="about.html" class="hover:underline">BloopBloop Studios™</a>. All Rights Reserved.
           </span>
