--- a/crane.html
+++ b/crane.html
@@ -16,7 +16,7 @@
 			  <div class="relative flex h-16 items-center justify-between">
 				<div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
 
-				  <button type="button" class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-900 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white" aria-controls="mobile-menu" aria-expanded="false">
+				  <button type="button" class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-900 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white">
 					<span class="absolute -inset-0.5"></span>
 					<span class="sr-only">Open main menu</span>
 
@@ -169,7 +169,7 @@
               </div>
           </div>
       </div>
-      <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
+      <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8">
       <div class="sm:flex sm:items-center sm:justify-between">
           <span class="text-sm text-gray-300 sm:text-center dark:text-gray-400">© 2023 <a href="about.html" class="hover:underline">BloopBloop Studios™</a>. All Rights Reserved.
           </span>
