--- a/crane_stepbystep_10.html
+++ b/crane_stepbystep_10.html
@@ -251,7 +251,7 @@
             </div>
         </div>
     </div>
-    <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
+    <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8">
     <div class="sm:flex sm:items-center sm:justify-between">
         <span class="text-sm text-gray-300 sm:text-center dark:text-gray-400">© 2023 <a href="about.html" class="hover:underline">BloopBloop Studios™</a>. All Rights Reserved.
         </span>
