--- a/shop_cherryblossoms.html
+++ b/shop_cherryblossoms.html
@@ -107,18 +107,18 @@
         <!-- Image gallery -->
         <div class="mx-auto mt-6 max-w-2xl sm:px-6 lg:grid lg:max-w-7xl lg:grid-cols-3 lg:gap-x-8 lg:px-8">
             <div class="aspect-h-4 aspect-w-3 hidden overflow-hidden rounded-lg lg:block">
-            <img src="images/shop/1_paper.jpg" alt="Cherry Blossom Origami">
+            <img src="images/shop/1_paper.jpg" alt="Cherry Blossom Origami" class="h-full w-full object-cover object-center">
             </div>
             <div class="hidden lg:grid lg:grid-cols-1 lg:gap-y-8">
             <div class="aspect-h-2 aspect-w-3 overflow-hidden rounded-lg">
-                <img src="images/shop/1_paper_3.jpg" alt="Cherry Blossom Origami">
+                <img src="images/shop/1_paper_3.jpg" alt="Cherry Blossom Origami" class="h-full w-full object-cover object-center">
             </div>
             <div class="aspect-h-2 aspect-w-3 overflow-hidden rounded-lg">
-                <img src="images/shop/1_paper_1.jpg" alt="Cherry Blossom Origami">
+                <img src="images/shop/1_paper_1.jpg" alt="Cherry Blossom Origami" class="h-full w-full object-cover object-center">
             </div>
             </div>
             <div class="aspect-h-5 aspect-w-4 lg:aspect-h-4 lg:aspect-w-3 sm:overflow-hidden sm:rounded-lg">
-            <img src="images/shop/1_paper_4.jpg" alt="Cherry Blossom Origami">
+            <img src="images/shop/1_paper_4.jpg" alt="Cherry Blossom Origami" class="h-full w-full object-cover object-center">
             </div>
         </div>
     
