--- a/cart.html
+++ b/cart.html
@@ -32,7 +32,7 @@
 				<div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
                     <div class="flex flex-shrink-0 items-center">
                         <a href="index.html">
-                            <img class="h-15 w-auto hover:bg-indigo-500" src="images/origame_logo.png" alt="Origame>
+                            <img class="h-15 w-auto hover:bg-indigo-500" src="images/origame_logo.png" alt="Origame">
                         </a>
                     </div>
 				  <div class="hidden sm:ml-6 sm:block">
@@ -89,7 +89,7 @@
     <h1>Shiny Origami Paper</h1>
  
     <div class="image">
-      <img src="images/shop/14_paper.jpg">
+      <img src="images/shop/14_paper.jpg" alt="Shiny Origami Paper">
     </div>
  
     <div class="description">
@@ -99,11 +99,8 @@
  
     <div class="quantity">
       <button class="plus-btn" type="button" name="button">+</button>
-        
-      </button>
       <input type="text" name="name" value="1">
       <button class="minus-btn" type="button" name="button">-</button>
-      </button>
     </div>
  
     <div class="total-price">$10.10</div>
@@ -116,7 +113,7 @@
     <h1>Cherry Blossom Origami Paper</h1>
  
     <div class="image">
-      <img src="images/shop/1_paper_3.jpg">
+      <img src="images/shop/1_paper_3.jpg" alt="Cherry Blossom Origami Paper">
     </div>
  
     <div class="description">
@@ -126,11 +123,8 @@
  
     <div class="quantity">
       <button class="plus-btn" type="button" name="button">+</button>
-        
-      </button>
       <input type="text" name="name" value="1">
       <button class="minus-btn" type="button" name="button">-</button>
-      </button>
     </div>
  
     <div class="total-price">$10.30</div>
