--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,8 @@
 	<div class="sm:col-span-2">
 		<label for="subj" class="block text-sm font-semibold leading-6 text-indigo-700">Subject</label>
 		<div class="mt-2.5">
-			<input type="text" name="subj" id="subj" autocomplete="subj" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+			<input type="text" name="subj" id="subj" class="block w-full rounded-md border-0 px-3.5 py-2 text-gray-900 shadow-sm ring-1
+			 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
 		</div>
 			<svg class="pointer-events-none absolute right-3 top-0 h-full w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
 			<path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z" clip-rule="evenodd" />
