--- a/rewards_ducknightlight.html
+++ b/rewards_ducknightlight.html
@@ -81,7 +81,7 @@
     <div class="bg-white">
         <div class="pt-6">
         <nav aria-label="Breadcrumb">
-            <ol role="list" class="mx-auto flex max-w-2xl items-center space-x-2 px-4 sm:px-6 lg:max-w-7xl lg:px-8">
+            <ol  class="mx-auto flex max-w-2xl items-center space-x-2 px-4 sm:px-6 lg:max-w-7xl lg:px-8">
             <li>
                 <div class="flex items-center">
                 <a href="index.html" class="mr-2 text-sm font-medium text-gray-900">Home</a>
@@ -204,7 +204,7 @@
                 <h3 class="text-sm font-medium text-gray-900">Highlights</h3>
     
                 <div class="mt-4">
-                <ul role="list" class="list-disc space-y-2 pl-4 text-sm">
+                <ul  class="list-disc space-y-2 pl-4 text-sm">
                     <li class="text-gray-400"><span class="text-gray-600">Gently squeeze to turn it on</span></li>
                     <li class="text-gray-400"><span class="text-gray-600">Rechargable with USB Connector</span></li>
                     <li class="text-gray-400"><span class="text-gray-600">Switches off automatically after 20 minutes of inactivity</span></li>
