--- a/login.html
+++ b/login.html
@@ -85,7 +85,7 @@
 	<div class="container">
 	  <div class="loginimg-container">
 		<div class="loginimg">
-		  <img src="images/login.png">
+		  <img src="images/login.png" alt="Login Image">
 		</div>
 	  </div>
 	  <div class="form-container">
