<html lang="en">

--- a/crane_video.html
+++ b/crane_video.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Crane Origami</title>
 	<link rel="stylesheet" type="text/css" href="styles/tutorialstyle.css">
