--- a/cart.html
+++ b/cart.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Cart</title>
 	<link rel="stylesheet" type="text/css" href="styles/cart.css">
