--- a/login.html
+++ b/login.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Log in</title>
 	<link rel="icon" type="image/x-icon" href="images/1x/LogoHeart.png">
