--- a/profile.html
+++ b/profile.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Profile</title>
   <link rel="stylesheet" type="text/css" href="styles/profile.css">
@@ -146,7 +146,9 @@
     <div class="header-container">
       <h2>Origami Gallery</h2>
     </div>
+
     <br>
+
     <div class="flex-gallery">
       <a href="tutorial.html">
         <img src="images/profile/gallery/crane.png" alt="Crane Origami" class="h-44 w-44">
@@ -167,7 +169,9 @@
         <img src="images/profile/gallery/crab.jpg" alt="Crab Origami" class="h-44 w-44">
       </a>
     </div>
+
   </div>
+
   <div class="modal-container">
     <div id="myModal" class="modal rounded-lg border-2 ring-indigo-500">
       <h2 class="text-center text-3xl font-bold pt-10">
@@ -177,8 +181,8 @@
         Completes 3 Tutorials
       </h1>
       <img class="w-30 h-50" src="images/badge_icon/yes_5_2.png" alt="Badge">
-      <button onclick="closeModal()" type="button" class="bg-indigo-600 shadow-xl hover:bg-indigo-500 text-white font-bold rounded-full p-4 w-48">Close</button>
-
+      <button onclick="closeModal()" type="button" class="bg-indigo-600 shadow-xl hover:bg-indigo-500 text-white 
+      rounded-lg p-4 text-center p-30">Close</button>
     </div>
     </div>
 
