--- a/review_page.html
+++ b/review_page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Review</title>
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
