--- a/rewards_ducknightlight.html
+++ b/rewards_ducknightlight.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Duck Nightlight</title>
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
