--- a/shop2.html
+++ b/shop2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Shop</title>
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
