--- a/shop_cherryblossoms.html
+++ b/shop_cherryblossoms.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Cherry Blossom Origami Paper 200PCs</title>
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
