--- a/shop_origami.html
+++ b/shop_origami.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Origami Paper</title>
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
