--- a/template.html
+++ b/template.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>OrigaMe!</title>
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
